Avatar Overhaul: Reworked Avatar Class, Included Support for modifying Avatar on Add/Edit commands, Accounted for most test cases